# pre-commit-hooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
vooki_pre_commit_hooks/: forbid_symlinks.py
